Update repo files

--- a/notebooks/dctm-department-of-justice.ipynb
+++ b/notebooks/dctm-department-of-justice.ipynb
@@ -20,10 +20,8 @@
     "from matplotlib import pyplot as plt\n",
     "from tqdm.notebook import tqdm\n",
     "\n",
-    "import sys\n",
-    "sys.path.append('../src/')\n",
-    "import correlated_topic_model as ctmd\n",
-    "import dynamic_correlated_topic_model as dctm\n",
+    "from dctm import correlated_topic_model as ctmd\n",
+    "from dctm import dynamic_correlated_topic_model as dctm\n",
     "from sklearn import metrics, preprocessing\n",
     "\n",
     "from imp import reload\n",
