--- a/notebooks/dctm-sotu.ipynb
+++ b/notebooks/dctm-sotu.ipynb
@@ -23,10 +23,8 @@
     "\n",
     "from imp import reload\n",
     "\n",
-    "import sys\n",
-    "sys.path.append('../src/')\n",
-    "import correlated_topic_model as ctmd\n",
-    "import dynamic_correlated_topic_model as dctm"
+    "from dctm import correlated_topic_model as ctmd\n",
+    "from dctm import dynamic_correlated_topic_model as dctm"
    ]
   },
   {
@@ -47,7 +45,7 @@
     "# path = './data/sotu'\n",
     "path = '/Users/federicot/Downloads/1660_131107_bundle_archive/sotu/'\n",
     "\n",
-    "import datasets\n",
+    "from dctm import datasets\n",
     "df, corpus, vocabulary = datasets.get_sotu(path)"
    ]
   },
