--- a/notebooks/dctm-neurips.ipynb
+++ b/notebooks/dctm-neurips.ipynb
@@ -27,11 +27,8 @@
     "from imp import reload\n",
     "from scipy import sparse as sp\n",
     "\n",
-    "import sys\n",
-    "sys.path.append('../src/')\n",
-    "\n",
-    "import correlated_topic_model as ctmd\n",
-    "import dynamic_correlated_topic_model as dctm"
+    "from dctm import correlated_topic_model as ctmd\n",
+    "from dctm import dynamic_correlated_topic_model as dctm"
    ]
   },
   {
@@ -57,7 +54,7 @@
     "# nltk.download('words')\n",
     "# nltk.download('punkt')\n",
     "# nltk.download('wordnet')\n",
-    "import datasets\n",
+    "from dctm import datasets\n",
     "\n",
     "df, years, vocabulary = datasets.get_neurips('NIPS_1987-2015.csv')\n",
     "\n",
@@ -293,7 +290,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import plotting\n",
+    "from dctm import plotting\n",
     "\n",
     "reload(plotting)\n",
     "plotting.plot_sigma(corr_sample, test_points, 11,\n",
